--- a/paper1.tex
+++ b/paper1.tex
@@ -162,8 +162,7 @@ analysis of the results\\
 
 %------------------------------------------------------------------------------%---------------------------------------
 %------------------------------------------------------------------------------%---------------------------------------
-
-\section{CITATIONS - Chicago style} % OUT-OF-ORDER intentional. Point number before "CITATIONS" auto-changed 
+\section{CITATIONS \normalfont{Chicago style:}} 	% Same as "References" as per prof
 \noindent
 Public Internet Standards (Various Authors)
 
@@ -187,12 +186,13 @@ Reference implementations provided by papers + standardized code\\
 TOTP - https://datatracker.ietf.org/doc/html/rfc6238\\
 HOTP - https://datatracker.ietf.org/doc/html/rfc4226 \\
 COTP - (\textbf{citation TBA})\\
+COTP implementation - https://github.com/TomEphraimPerez/CS5540-final/tree/webserver /nginx\\
 
 \noindent
 Collecting TCP Timings via Performance API\\
 https://developer.mozilla.org/en-US/docs/Web/API/Performance\\
 Collecting TLS Information via Security Info from Extensions JS API\\
-https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API/webRequest/SecurityInfo\\
+https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API/webRequest /SecurityInfo\\
 
 \noindent
 Store Secret via Browser Extension Storage API\\
@@ -210,7 +210,9 @@ JA3, https://github.com/salesforce/ja3\\
 https://coveryourtracks.eff.org/, Proceedings of the Privacy Enhancing Technologies Symposium
 
 %---------------------------------------------------------------------------------------------------------------------
-
+\section{Conclusion}
+conclusions\\
+more\\
 
 
 
