--- a/paper1.tex
+++ b/paper1.tex
@@ -329,13 +329,25 @@ https://cybernews.com/security/researchers-find-more-than-1200-phishing-toolkits
 \noindent
 [-]Public Internet Standards (Various Authors)\\
 
+
 %---------------------------------------------------------------------------------------------------------------------
 \section{Conclusion}
-conclusions\\
-more\\
+In this work, we looked at providing clients or servers a method of detecting transparent MITMs, one of the most advanced phishing attacks today by using connection details with a proposed algorithm based on one time passwords, called Connection-Oriented One-Time Passwords. Utilizing COTP as an additional factor, once the user has been authenicated (by means of knowledge, or some other factor), COTP enables MITM detection through generation of a composite secret from multiple factors including connection features observed. In other words, instead of the server validating the user again, with this factor, we propose the inverse: the server offers the user an enhanced one time use password to validate. We evaluated some potential weaknesses of the method, and techiques we used to make COTP an useful validation factor, along with a reference implementation using publically available browsers and web server implementations.
 
+\subsection{Implications of Work}
+Although this work attempts to show that application layer detection of transparent MITMs is possible - there are some important considerations to take into account.
 
+\subsubsection{Should not be a Solo Factor}
+COTP provides a robust method to validate multiple factors, namely: knowledge, connection details, and device. However, for maximum effectiviness, validation of both parties should be done. First, the user should be validated by the server - ideally using COTP or another 2FA method. This is the same as the state of the art today by Duo or Google Authenicator. But, an additional validation should be used to allow the client to validate the server. Because the server has already validated the client, this is effectively a courtesy offered and as no impact on authorization to access the protected resources.
+
+\subsubsection{Connection Latency Reporting May Vary}
+This work offers a method to deal with latency mismatch between server and client by rounding to the nearest prime based latency window. Multiple COTPs should be done through the client or simply retrying authenication as propsed in this work. However, this method means that a stocastic method to validating the user should be used to reduce the number of retries. This is in contrast to a traditional one-time password methods, which can be performed from a seperate device. 
+
+\subsection{Future Work}
+Future work includes further addressing timing discrepencies between server and client. One interesting approach could be remap the values to nearest prime number or calibrating the error out during server boot. Care must be taken to ensure that close values map to a simliar value while values with large differences map to entirely different values - all without the counterpart's number. If such a techinque is found, this factor becomes significantly more robust to one time code differences.
+
+Another potiential future work is finding the optimal balance between connection oriented details and other factors. This work focused on introducing connection oriented features to a verification algorithm, using only shared features between both parties; however, there are additional features that are shared, and can be included. One such additional feature is each party's supported cipher suites or another is selected curve - both could increase difficultly for an advanced transparent MITM to sucessfully mimick all details symetrically. However, the increase in difficultly also needs to be assessed. Another issue is balance between authication features - a completely connection oriented approach will fail, due to connection details being publically available to a motivated attacker through protocol analysis.
+
+Finally, another future work is potientially repeatedly validating or checking factors periodically. TLS addresses forward secrecy through rekeying - and this is part of the protocol. The same process could trigger a transparent COTP generation and exchange. This type of feature is already possible on the browser side and could be implemented on the server side. In addition, a new shared secret could be generated, and shared upon rekey - allowing a forward autheication. Those with access to previous details would not have future authenication. 
 
 \end{document}
-
-
